<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Dialog_Container">

    <!-- Title -->
    <TextView
        style="@style/Empty_State_Title"
        android:text="@string/language_selection_title" />

    <!-- Radio Group to manage single selection -->
    <RadioGroup
        style="@style/Dialog_RadioGroup"
        android:id="@+id/language_radio_group">

        <!-- English Radio Button -->
        <RadioButton
            android:id="@+id/radio_english"
            style="@style/Dialog_RadioButton.First"
            android:text="@string/language_english" />

        <!-- French Radio Button -->
        <RadioButton
            android:id="@+id/radio_french"
            style="@style/Dialog_RadioButton.Middle"
            android:text="@string/language_french" />

        <!-- Arabic Radio Button -->
        <RadioButton
            android:id="@+id/radio_arabic"
            style="@style/Dialog_RadioButton.Middle"
            android:text="@string/language_arabic" />

    </RadioGroup>

    <!-- Apply Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_apply_language"
        style="@style/Save_Button"
        android:layout_marginTop="@dimen/spacing_lg"
        android:text="@string/btn_apply_language" />

</LinearLayout>