<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/Page_Container">

    <TextView
        android:id="@+id/Title"
        style="@style/Page_Title"
        android:text="@string/profile_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        style="@style/Profile_Scroll_View"
        app:layout_constraintBottom_toTopOf="@id/navigation_include"
        app:layout_constraintTop_toBottomOf="@id/Title"
        tools:ignore="MissingConstraints">

        <LinearLayout style="@style/Profile_Content_Wrapper">

            <LinearLayout style="@style/Profile_Header_Wrapper">

                <androidx.cardview.widget.CardView style="@style/Profile_Avatar_Card">
                    <ImageView
                        style="@style/Profile_Avatar_Image"
                        android:src="@drawable/ic_profile" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/profile_name"
                    style="@style/Profile_Name_Text"
                    android:text="@string/profile_name_placeholder" />

                <TextView
                    android:id="@+id/profile_email"
                    style="@style/Profile_Email_Text"
                    android:text="@string/profile_email_placeholder" />
            </LinearLayout>

            <TextView style="@style/Profile_Section_Label" android:text="@string/profile_section_account" />

            <LinearLayout style="@style/Profile_Card_Container">
                <LinearLayout
                    android:id="@+id/row_edit_info"
                    style="@style/Profile_Row_Wrapper">

                    <FrameLayout style="@style/Stat_Icon_Wrapper">
                        <ImageView
                            style="@style/Stat_Icon"
                            android:src="@drawable/ic_person_outline"
                            app:tint="@color/primary_green" />
                    </FrameLayout>

                    <TextView
                        style="@style/Profile_Row_Label"
                        android:text="@string/profile_edit_info" />

                    <ImageView style="@style/Profile_Row_Arrow" />
                </LinearLayout>

                <View style="@style/Divider_Horizontal" />

                <LinearLayout
                    android:id="@+id/row_change_password"
                    style="@style/Profile_Row_Wrapper">

                    <FrameLayout style="@style/Stat_Icon_Wrapper">
                        <ImageView style="@style/Stat_Icon" android:src="@drawable/ic_lock_outline" app:tint="@color/primary_green"/>
                    </FrameLayout>

                    <TextView
                        style="@style/Profile_Row_Label"
                        android:text="@string/profile_change_password" />

                    <ImageView style="@style/Profile_Row_Arrow" />
                </LinearLayout>
            </LinearLayout>

            <TextView style="@style/Profile_Section_Label" android:text="@string/profile_section_preferences" />

            <LinearLayout style="@style/Profile_Card_Container">

                <LinearLayout
                    android:id="@+id/row_change_theme"
                    style="@style/Profile_Row_Wrapper">
                    <FrameLayout style="@style/Stat_Icon_Wrapper">
                        <ImageView style="@style/Stat_Icon" android:src="@drawable/ic_moon" app:tint="@color/primary_green"/>
                    </FrameLayout>

                    <TextView
                        style="@style/Profile_Row_Label"
                        android:text="@string/profile_theme" />

                    <TextView
                        android:id="@+id/profile_theme_value"
                        style="@style/Profile_Language_Value"
                        tools:text="@string/theme_light" />

                    <ImageView style="@style/Profile_Row_Arrow" />
                </LinearLayout>

                <View style="@style/Divider_Horizontal" />

                <LinearLayout
                    android:id="@+id/row_change_language"
                    style="@style/Profile_Row_Wrapper">
                    <FrameLayout style="@style/Stat_Icon_Wrapper">
                        <ImageView style="@style/Stat_Icon" android:src="@drawable/ic_lang" app:tint="@color/primary_green"/>
                    </FrameLayout>

                    <TextView
                        style="@style/Profile_Row_Label"
                        android:text="@string/profile_language" />

                    <TextView
                        android:id="@+id/profile_language_value"
                        style="@style/Profile_Language_Value"
                        tools:text="@string/profile_language_value" />

                    <ImageView style="@style/Profile_Row_Arrow" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/navigation_include"
        layout="@layout/layout_bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_height"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>